FinalProject/kubernetes/python-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask
spec:
  replicas: 5
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: redis
        imagePullPolicy: Never
        ports:
          - containerPort: 5001
