FinalProject/kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: db
spec:
  ports:
  - port: 3306
    protocol: TCP
    name: mysql-service
  selector:
    app: db
  type: NodePort
